fix: change spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1192,7 +1192,6 @@ body.vg-sidebar-open {
 
 .vg-categories-posts-list .vg-categories-list__item {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   gap: 20px;
   height: 65px;
